// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Korean Live Radio Page A11y I can see the skip to content link 1`] = `"내용 보기"`;

exports[`Canonical Korean Live Radio Page Analytics ATI 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" src="https://logws1363.ati-host.net?s=598343&amp;s2=57&amp;p=korean.bbc_korean_radio.liveradio.page&amp;x1=[urn%3Abbc%3Aares%3Aws_media%3Alive%3Abbc_korean_radio]&amp;x2=[responsive]&amp;x3=[news-korean]&amp;x4=[ko]&amp;x7=[player-live]&amp;x8=[simorgh-nojs]&amp;x9=[BBC%2520%EC%BD%94%EB%A6%AC%EC%95%84%2520%EB%9D%BC%EB%94%94%EC%98%A4%2520-%2520BBC%2520News%2520%EC%BD%94%EB%A6%AC%EC%95%84]"/>"`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, 코리아",
  "url": "/korean",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 2`] = `
{
  "text": "BBC News를 신뢰할 수 있는 이유",
  "url": "https://www.bbc.com/korean/institutional-49283197",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 3`] = `
{
  "text": "이용 약관",
  "url": "https://www.bbc.com/usingthebbc/terms/",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 4`] = `
{
  "text": "BBC 소개",
  "url": "https://www.bbc.com/aboutthebbc",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 5`] = `
{
  "text": "개인정보취급방침",
  "url": "https://www.bbc.com/usingthebbc/privacy/",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 6`] = `
{
  "text": "쿠키정책",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 7`] = `
{
  "text": "고객센터",
  "url": "https://www.bbc.co.uk/korean/send/u50853423",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 8`] = `
{
  "text": "외부 링크에 대한 본사 정책 보기",
  "url": "https://www.bbc.com/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Korean Live Radio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/korean"`;

exports[`Canonical Korean Live Radio Page Footer Paragraphs should match text 1`] = `"© 2024 BBC. BBC는 외부 사이트 및 타사 콘텐츠에 대한 책임을 지지 않습니다 외부 링크에 대한 본사 정책 보기"`;

exports[`Canonical Korean Live Radio Page Header I can see the branding 1`] = `"BBC News, 코리아"`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 1`] = `
{
  "text": "뉴스",
  "url": "/korean",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 2`] = `
{
  "text": "비디오",
  "url": "/korean/topics/cnwng7v0e54t",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 3`] = `
{
  "text": "라디오",
  "url": "/korean/bbc_korean_radio/programmes/w13xttll",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 4`] = `
{
  "text": "다운로드",
  "url": "/korean/downloads",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 5`] = `
{
  "text": "TOP 뉴스",
  "url": "/korean/popular/read",
}
`;

exports[`Canonical Korean Live Radio Page Main heading should match text 1`] = `"내부 서버 에러"`;

exports[`Canonical Korean Live Radio Page Media Player a11y assistive technology can read the media player title 1`] = `"오디오 플레이어"`;

exports[`Canonical Korean Live Radio Page Media Player iframe with valid URL should be rendered 1`] = `"https://www.test.bbc.com/ws/av-embeds/media/bbc_korean_radio/liveradio/ko?morph_env=live"`;

exports[`Canonical Korean Live Radio Page SEO Canonical link 1`] = `"http://localhost:7080/korean/bbc_korean_radio/liveradio"`;

exports[`Canonical Korean Live Radio Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Korean Live Radio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Korean Live Radio Page SEO Heading level 1 1`] = `"내부 서버 에러"`;

exports[`Canonical Korean Live Radio Page SEO Lang attribute 1`] = `"ko"`;

exports[`Canonical Korean Live Radio Page SEO OG description 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;

exports[`Canonical Korean Live Radio Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"`;

exports[`Canonical Korean Live Radio Page SEO OG image alt 1`] = `"BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO OG locale 1`] = `"ko-KO"`;

exports[`Canonical Korean Live Radio Page SEO OG site name 1`] = `"BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO OG title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO OG type 1`] = `"website"`;

exports[`Canonical Korean Live Radio Page SEO OG url 1`] = `"http://localhost:7080/korean/bbc_korean_radio/liveradio"`;

exports[`Canonical Korean Live Radio Page SEO Page title 1`] = `"내부 서버 에러 - BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO Robots meta tag 1`] = `"noindex,nofollow"`;

exports[`Canonical Korean Live Radio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Korean Live Radio Page SEO Twitter creator 1`] = `"@bbcnews"`;

exports[`Canonical Korean Live Radio Page SEO Twitter description 1`] = `"내부 서버 에러"`;

exports[`Canonical Korean Live Radio Page SEO Twitter image alt 1`] = `"BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"`;

exports[`Canonical Korean Live Radio Page SEO Twitter site 1`] = `"@bbcnews"`;

exports[`Canonical Korean Live Radio Page SEO Twitter title 1`] = `"내부 서버 에러 - BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page Summary should match text 1`] = `"죄송합니다. 페이지를 찾지 못했습니다. 이 중 하나를 시도해보세요:"`;
